--- a/style.css
+++ b/style.css
@@ -33,9 +33,6 @@ a {
   margin: 4rem auto 0;
 }
 
-.nav-top__left {
-}
-
 .nav-top__left h1 {
   margin-top: 0.5rem;
   font-weight: normal;
@@ -59,7 +56,7 @@ a {
   transition: all 0.2s ease-in;
 }
 .nav-top__right__user i:hover {
-  color: goldenrod;
+  color: orange;
   transform: scale(1.1);
 }
 .nav-top__right__user__text {
@@ -81,14 +78,18 @@ a {
 
 .nav__contact li {
   text-align: center;
-  min-width: 25%;
+  min-width: 33.33%;
   padding: 1rem 2rem;
   border: 1px solid black;
   border-top: none;
+  border-bottom: none;
 }
 .nav__contact li:nth-child(2) {
   border: none;
-  border-bottom: 1px solid black;
+}
+
+.nav__contact li:hover {
+  color: orange;
 }
 
 header {
@@ -142,7 +143,7 @@ header img {
 .pourcentage {
   position: absolute;
   top: 50px;
-  right: -10px;
+  right: -20px;
   background-color: black;
   padding: 1rem;
   text-align: center;
@@ -197,13 +198,14 @@ footer nav {
   border-radius: 10px;
   padding: 1rem;
   position: relative;
-  top: -15px;
+  top: -25px;
 }
 
 footer nav ul {
   display: flex;
   justify-content: space-around;
   align-items: center;
+  color: black;
 }
 
 footer nav li:hover {
@@ -222,6 +224,14 @@ footer nav li:hover {
   margin: 0 1rem;
 }
 
+.footer__icons__card img {
+  transition: all 0.2s ease-in-out;
+}
+
+.footer__icons__card img:hover {
+  transform: rotate(-45deg);
+}
+
 .footer__icons__card p {
   margin-top: 1rem;
 }
@@ -233,6 +243,11 @@ footer nav li:hover {
   color: lightgray;
 }
 .footer__gafam img {
+  transition: all 0.2s ease-in;
+}
+
+.footer__gafam img:hover {
+  transform: scale(1.2);
 }
 
 .--orange {
